--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,11 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -35,4 +32,43 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.grid_items {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 0;
+  grid-row-gap: 20px;
+}
+
+	
+@media only screen and (min-width: 600px) {
+  .grid_items {
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: 47.5% 47.5%; */
+    grid-column-gap: 5%;
+    gap: 8px;
+  }
+}
+@media only screen and (min-width: 900px) {
+  .grid_items {
+    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: 30% 30% 30%; */
+    gap: 8px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .grid_items {
+    grid-template-columns: repeat(5, 1fr);
+    gap: 8px;
+  }
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, auto);
+  gap: '8px';
+  place-items: center;
 }
